--- a/LimenawebApp/Web.config
+++ b/LimenawebApp/Web.config
@@ -74,7 +74,7 @@
   <system.net>
     <mailSettings>
       <smtp from="donotreply@limenainc.net">
-        <network host="smtp-mail.outlook.com" port="587" userName="donotreply@limenainc.net" password="velasquez1994" enableSsl="true" />
+        <network host="smtp-mail.outlook.com" port="587" userName="donotreply@limenainc.net" password="D0notR3ply@2018" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
