Se agrego nuevo proyecto y se esta validando proceso de tareas con scripts compatibles para Safari iOS

--- a/LimenawebApp/LimenawebApp.csproj
+++ b/LimenawebApp/LimenawebApp.csproj
@@ -15146,6 +15146,11 @@
     <Content Include="Views\Inventory\Binloc.cshtml" />
     <Content Include="Views\Inventory\Binloc_master.cshtml" />
     <Content Include="Views\Inventory\Binloc_tasks.cshtml" />
+    <Content Include="Views\Inventory\Projects_new.cshtml" />
+    <Content Include="Views\Shared\temp_head.cshtml" />
+    <Content Include="Views\Shared\temp_header.cshtml" />
+    <Content Include="Views\Shared\main_sidebar.cshtml" />
+    <Content Include="Views\Shared\main_footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
