--- a/LimenawebApp/packages.config
+++ b/LimenawebApp/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
   <package id="FastMember" version="1.3.0" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -35,5 +36,5 @@
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
-  <package id="Z.EntityFramework.Extensions" version="4.0.35" targetFramework="net461" />
+  <package id="Z.EntityFramework.Extensions" version="4.0.61" targetFramework="net461" />
 </packages>
